<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="T_Ctrl_SIf_IBH_Cfg" Id="{3ba03782-c7db-4092-abc5-720424700977}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_IBH_Cfg :
STRUCT
	/// Number of Modules in use, <= 8 
	uiNumberOfModules: UINT;
	/// IPv4 network address 
	tIpAddress: T_IPv4Addr;
	/// Remote (server) port address 
	udiPortAdress: UDINT;
	/// MPI device address 
	nDeviceAddress: BYTE;
	/// Read/write from/to datablock number 
	nDatablockNumber: BYTE;
	/// Maximum time allowed for the execution of the command 
	tTimeout: TIME;
	/// Write byte/word offset/start address 
	nWriteStartAddress: WORD;
	/// Read byte/word offset/start address 
	nReadStartAddress: WORD;
	uiByteOffset_rd_iStatus: UINT;
	uiByteOffset_rd_bOff: UINT;
	uiBitOffset_rd_bOff: UINT;
	uiByteOffset_rd_bBeltOnly: UINT;
	uiBitOffset_rd_bBeltOnly: UINT;
	uiByteOffset_rd_bManual: UINT;
	uiBitOffset_rd_bManual: UINT;
	uiByteOffset_rd_bRun: UINT;
	uiBitOffset_rd_bRun: UINT;
	uiByteOffset_rd_bSetParam: UINT;
	uiBitOffset_rd_bSetParam: UINT;
	uiByteOffset_rd_bGetParam: UINT;
	uiBitOffset_rd_bGetParam: UINT;
	uiByteOffset_rd_bAckError: UINT;
	uiBitOffset_rd_bAckError: UINT;
	uiByteOffset_rd_adiTemp_mc: UINT;
	uiByteOffset_rd_adiAir_p: UINT;
	uiByteOffset_rd_diSpeed_mm_min: UINT;
	uiByteOffset_rd_iErrorLevel: UINT;
	uiByteOffset_rd_iErrorID: UINT;
	uiByteOffset_rd_iErrorValue: UINT;
	uiByteOffset_wr_iOff: UINT;
	uiByteOffset_wr_iBeltOnly: UINT;
	uiByteOffset_wr_iManual: UINT;
	uiByteOffset_wr_iRun: UINT;
	uiByteOffset_wr_iSetParam: UINT;
	uiByteOffset_wr_iGetParam: UINT;
	uiByteOffset_wr_iAckError: UINT;
	uiByteOffset_wr_adiTemp_mc: UINT;
	uiByteOffset_wr_adiAir_p: UINT;
	uiByteOffset_wr_diSpeed_mm_min: UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>