<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="ST_Header" Id="{f5d054f1-f932-4e45-8603-63090a1a960e}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_Header :
STRUCT
	uinMsgId: UINT;
	udiMsgSize: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>