<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <GVL Name="TCP_Constants" Id="{6c4d2dff-dec3-479f-9300-966f151d9dd1}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	/// Define length of data buffer. Max. 900 Byte
	MAX_DATASET_SIZE: UDINT := 900;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>