<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_TCP_Cfg" Id="{a494adfe-688b-4688-bed7-5420328bb8fc}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_TCP_Cfg :
STRUCT
	/// depending on the protocol an ACK is used or not
	bUsingAck: BOOL;
	/// Enable Auto Reconnect
	bolAutoReconnectEnable: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>