<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_TCP_Cur" Id="{2ee28923-bec7-4851-a70a-02b3725582e6}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_TCP_Cur :
STRUCT
	bolFubErrorActive: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>